# Rust-Ntex-PostgreSQL-Backend-Template

./: Cargo.toml
src/: db.rs  main.rs
